# foobot-haskell

./: LICENSE  foobot.cabal
app/: Main.hs
